<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_weight="10"
    android:background="@drawable/bg"
    tools:context=".MainActivity">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="7">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageview"
            android:background="@drawable/logo_1x"
            android:layout_centerInParent="true"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="@color/black"
            android:layout_below="@+id/imageview"
            android:layout_marginTop="10dp"
            android:text="@string/terms"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="3"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
       >

        <EditText
            android:id="@+id/emailEt"
            android:layout_width="fill_parent"
            android:layout_marginTop="50dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:layout_gravity="center"
            android:hint="@string/email"
            android:singleLine="true"
            android:nextFocusDown="@+id/passEt"/>
        <EditText
            android:id="@+id/passEt"
            android:layout_width="fill_parent"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:inputType="textPassword"

            android:hint="@string/password"/>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:weightSum="2">
         <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
             android:layout_weight="1"
            android:textColor="@color/white"
            android:background="@drawable/button_1x"
            android:text="@string/login"
             android:textStyle="bold"
        android:id="@+id/signin"/>
            <Button
                android:id="@+id/signup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:textColor="@color/white"
                android:paddingRight="15dp"
                android:paddingLeft="15dp"
                android:textStyle="bold"
                android:layout_weight="1"

                android:background="@drawable/button_1x"
                android:text="@string/signup"/>

        </LinearLayout>
        <TextView
            android:id="@+id/passwordTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgotpassword"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:background="@android:color/transparent"
            android:textColor="@color/black"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:background="@color/transparent"
            android:layout_marginTop="50dp"
            android:text="@string/terms"/>
        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/skyblue"
            android:background="@color/transparent"
            android:textStyle="bold"
            android:text="@string/temsButton"/>

    </LinearLayout>
</LinearLayout>
