<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:layout_weight="10"
    android:background="@drawable/bg"
    tools:context=".MainActivity">


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="7">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageview"
        android:background="@drawable/logo_1x"
        android:layout_centerInParent="true"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:layout_below="@+id/imageview"
            android:layout_marginTop="10dp"
            android:text="@string/terms"/>

    </RelativeLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_weight="3"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
       >
        <EditText
            android:layout_width="fill_parent"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:id="@+id/emailEt"
            android:hint="@string/email"
            android:singleLine="true"
            android:textColorHint="@color/black"
            android:nextFocusDown="@+id/passwordEt"/>
        <EditText
            android:layout_width="fill_parent"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textColorHint="@color/black"

            android:id="@+id/passwordEt"
            android:inputType="textPassword"
            android:singleLine="true"
            android:hint="@string/password"
            android:nextFocusDown="@+id/confirmPassEt"/>
        <EditText
            android:layout_width="fill_parent"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="@color/black"

            android:layout_gravity="center"
            android:id="@+id/confirmPassEt"
            android:hint="@string/repasswo"
            android:inputType="textPassword"
            />
        <RadioGroup
            android:id="@+id/group"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/doctor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
           android:text="@string/loginasdoctor"
            android:button="@null"
            android:checked="true"
            android:drawablePadding="5dp"
            android:drawableLeft="@drawable/radiobtn_selector"
            />
        <RadioButton
            android:id="@+id/patient"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:button="@null"
            android:checked="false"
            android:drawableLeft="@drawable/radiobtn_selector"
            android:drawablePadding="5dp"
            android:text="@string/loginaspatient"/>
        </RadioGroup>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:weightSum="2">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:background="@drawable/button_1x"
            android:id="@+id/signupBtn"
            android:textStyle="bold"
            android:layout_weight="1"

            android:text="Sign up"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"

            android:id="@+id/alreadyRegisterBtn"
            android:background="@drawable/button_1x"
            android:text="@string/alreadyregistered"/>
            </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:background="@color/transparent"
             android:layout_marginTop="25dp"
            android:text="@string/terms"/>
        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/skyblue"
            android:background="@color/transparent"
            android:textStyle="bold"
            android:text="@string/temsButton"/>
    </LinearLayout>
</LinearLayout>
